--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "purescript-eff": "^3.1.0",
     "purescript-foreign": "^4.0.1",
     "purescript-aff-promise": "^1.0.0",
-    "purescript-node-buffer": "^3.0.1"
+    "purescript-node-buffer": "^3.0.1",
+    "purescript-coroutines": "^4.0.0",
+    "purescript-aff-coroutines": "^6.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
