--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
-    "purescript-console": "^3.0.0"
+    "purescript-console": "^3.0.0",
+    "purescript-spec": "^2.0.0"
   }
 }
