Changes tests to cleanup properly and use a local MQTT broker

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preinstall": "bower install",
+    "postinstall": "pulp build",
+    "test": "pulp test"
   },
   "dependencies": {
     "mqtt": "^2.13.1"
